# JniPractice

./: .gitignore  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/xter/jnipractice/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: start.cpp
app/src/main/java/com/xter/jnipractice/: MainActivity.java  SomeFunc.java  User.java
app/src/main/java/com/xter/jnipractice/entity/: Profile.java  Secret.java  User.java
app/src/main/java/com/xter/jnipractice/util/: BytesUtils.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/xter/jnipractice/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
